--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,11 +1,12 @@
 body {
+    margin-top: 0;
     text-align: center;
     background: #333;
 }
 
 #canvas-container {
     width: 800px;
-    height: 800px;
+    height: 500px;
     margin: auto;
     cursor: none;
 }
